--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -1,2 +1,4 @@
-\chapter{Conclusion}
-The answer to this is very simple. It was a joke. It had to be a number, an ordinary, smallish number, and I chose that one. Binary representations, base thirteen, Tibetan monks are all complete nonsense. I sat at my desk, stared into the garden and thought '42 will do'. I typed it out. End of story.
+\chapter{Conclusions and Future Work}
+
+\input{conclusion/conclusion}
+\input{conclusion/future-work}
