--- a/doc/thesis/methodology.tex
+++ b/doc/thesis/methodology.tex
@@ -4,3 +4,4 @@
 \input{methodology/population-generation}
 \input{methodology/genetic-operators}
 \input{methodology/parameters}
+\input{methodology/multiobjective}
