--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -60,12 +60,12 @@
 \mainmatter 
 \pagestyle{headings}
 \input{introduction}
-
 \input{background}
 \input{previous-work}
 \input{methodology}
+\input{results}
+\input{conclusion}
 
-% \input{conclusion}
 %\theendnotes
 
 %this is the area for the .bib file
