--- a/doc/thesis/introduction/problem-definition.tex
+++ b/doc/thesis/introduction/problem-definition.tex
@@ -1,4 +1,5 @@
-\section{Problem Definition}
+\section{Problem Definition: Structure Refinement Problem}
+\label{sec:problem-definition}
 
 The goal of this thesis is to examine different search heuristics to determine the best method of finding the theoretical atomic structure of a molecule using the molecule's EXAFS spectrum for comparison. This problem contains two important but unrelated goals. Firstly, the algorithm must be able to find an atomic structure whose EXAFS spectrum matches the experimental EXAFS spectrum, and secondly, creating an atomic structure whose potential energy is a low as possible.
 
