--- a/doc/thesis/methodology.tex
+++ b/doc/thesis/methodology.tex
@@ -4,4 +4,5 @@
 \input{methodology/population-generation}
 \input{methodology/genetic-operators}
 \input{methodology/parameters}
+\input{methodology/fitness}
 \input{methodology/multiobjective}
