--- a/doc/thesis/methodology/genetic-operators.tex
+++ b/doc/thesis/methodology/genetic-operators.tex
@@ -33,4 +33,4 @@ The value of 0.05\AA\ was chosen for the experiments as a middle ground that cou
 
 \subsection{Selection}
 
-For the selection operator a 3-tournament selection was used.
+Tournament selection was used as the selection operator for the genetic algorithms. A tournament size of 3 was used in all experiments.
