--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -63,8 +63,10 @@
 \input{background}
 \input{previous-work}
 \input{methodology}
-\input{results}
-\input{conclusion}
+\input{experimental-design}
+\input{analysis}
+% \input{results}
+% \input{conclusion}
 
 %\theendnotes
 
