--- a/doc/thesis/methodology/problem-encoding.tex
+++ b/doc/thesis/methodology/problem-encoding.tex
@@ -2,7 +2,10 @@
 
 A molecule consists of a number of atoms. Each of these atoms has its own 3-dimensional position within the molecule. For the structure refinement problem the individual 3-dimensional position values are not important. The important information about this problem is how the atoms are positioned with respect to each other. Two different forms of representation were used in this work. For each of these representations the number values are shown in Angstroms (\AA).
 
-The initial run of experiments used a representation that maintained the initial atomic positions of each atom. The 3-dimensional coordinates were treated as a list of coordinates as shown in~\ref{fig:representation1}. Using this representation meant that during any form of crossover the tuple of X, Y and Z values would stay together.
+\subsection{Representation 1}
+\label{subsec:encoding-1}
+
+The initial run of experiments used a representation that maintained the initial atomic positions of each atom. The 3-dimensional coordinates were treated as a list of coordinates as shown in Figure~\ref{fig:representation1}. Using this representation meant that during any form of crossover the tuple of X, Y and Z values would stay together.
 
 \begin{figure}
 	\centering
@@ -19,7 +22,10 @@ The initial run of experiments used a representation that maintained the initial
 	\label{fig:representation1}
 \end{figure}
 
-Algorithms such as particle swarm optimization and differential evolution called for a more flexible representation. The other representation used was simply a list of values. The initial list of 3-dimensional coordinates was converted to a single list of decimal points as shown in~\ref{fig:representation2}. It is important to note that both of these representations are showing the same information. For fitness evaluation the list of number was converted back to a list of 3-dimensional coordinates by taking segments of three numbers to create a 3-dimensional position.
+\subsection{Representation 2}
+\label{subsec:encoding-2}
+
+Algorithms such as particle swarm optimization and differential evolution called for a more flexible representation. The other representation used was simply a list of values. The initial list of 3-dimensional coordinates was converted to a single list of decimal points as shown in Figure~\ref{fig:representation2}. It is important to note that both of these representations are showing the same information. For fitness evaluation the list of number was converted back to a list of 3-dimensional coordinates by taking segments of three numbers to create a 3-dimensional position.
 
 \begin{figure}
 	\centering
