--- a/doc/thesis/analysis/ea.tex
+++ b/doc/thesis/analysis/ea.tex
@@ -1,7 +1,8 @@
 \section{Evolutionary Algorithms}
 
+\subsection{Analysis}
+
 \begin{table}
-	\label{table:ea-pso-results}
 	\centering
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | c | c | c | c | c | c | }
 		\hline
@@ -9,10 +10,10 @@
 		RMSD &  &  &  &  &  &  &  &  &  &  &  &  \\ \hline
 	\end{tabular}
 	\caption{Results for the PSO runs}
+	\label{table:ea-pso-results}
 \end{table}
 
 \begin{table}
-	\label{table:ea-de-results}
 	\centering
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | }
 		\hline
@@ -20,4 +21,5 @@
 		RMSD &  &  &  &  \\ \hline
 	\end{tabular}
 	\caption{Results for the DE runs}
+	\label{table:ea-de-results}
 \end{table}
