--- a/doc/thesis/analysis/ga.tex
+++ b/doc/thesis/analysis/ga.tex
@@ -1,5 +1,11 @@
 \section{Genetic Algorithm: Viability}
 
+\subsection{Analysis}
+
+- numbers of generations
+- rga sees more individuals
+- examples of rga
+
 \begin{table}
 	\label{table:basic-ga-results}
 	\centering
