--- a/doc/thesis/analysis/post-op.tex
+++ b/doc/thesis/analysis/post-op.tex
@@ -1,5 +1,10 @@
 \section{Genetic Algorithm: Post-Optimization}
 
+\subsection{Analysis}
+
+- reasons DE might not have worked
+- benefits of post op
+
 \begin{table}
 	\label{table:post-op-pso-results}
 	\centering
