--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -7,4 +7,4 @@ The purpose of this chapter is to assist the reader in understanding the search 
 \input{background/rga}
 \input{background/pso}
 \input{background/de}
-\input{background/pareto}
+% \input{background/pareto}
