--- a/doc/thesis/methodology.tex
+++ b/doc/thesis/methodology.tex
@@ -3,6 +3,5 @@
 \input{methodology/problem-encoding}
 \input{methodology/population-generation}
 \input{methodology/genetic-operators}
-\input{methodology/parameters}
 \input{methodology/fitness}
-\input{methodology/multiobjective}
+% \input{methodology/multiobjective}
