--- a/doc/thesis/experimental-design/ga.tex
+++ b/doc/thesis/experimental-design/ga.tex
@@ -1,27 +1,21 @@
 \section{Genetic Algorithm: Viability}
+\label{sec:ga-viability}
 
 \subsection{Purpose}
 
-The purpose of this study is to determine the viabiltiy of using an evolutionary algorithm to solve the structure refinement problem (Section~\ref{sec:problem-definition}). Previous studies~\cite{sproviero2008model}~\cite{luber2011s1} have shown that iterative algorithms work well in finding candidate solutions to the problem.
+The purpose of this study is to determine the viabiltiy of using an evolutionary algorithm to solve the structure refinement problem (Section~\ref{sec:problem-definition}). Previous studies~\cite{sproviero2008model}~\cite{luber2011s1} have shown that iterative algorithms work well in finding candidate solutions to the problem. This study will demonstrate how well the population based search algorithms GA, and RGA perform on the structure refinement problem.
 
-\subsection{Setup}
+\subsection{Population}
 
-During the initial stages of experimentation the initial populations were created by randomly adjusting the atoms within this initial structure. To create a new individual each atom within the atomic structure would be randomly moved by 0.05-0.5\AA. This form of population generation was quickly discarded because many of these individuals were either chemically infeasible or generated erroneous EXAFS spectra. 
-
-- what population type was used.
-- representation
-- fitness function
+During the initial stages of testing a random population of candidate solutions was generated using the technique described in Subsection~\ref{subsec:random-population}. The candidate solutions that were generated using the random method had either high fitness scores or were too chemically infeasible and an EXAFS spectrum could not be generated. Candidate solutions that were able to generate EXAFS spectra were repeatedly generated until there were enough to fill the GA population but the experiments were unable to produce a candidate solution that had an EXAFS spectrum that improved upon the starting candidate.
 
 \subsection{System Parameters}
 
-Two evolutionary algorithms were used in this run: GA, and RGA. The system parameters for the GA can be seen in Table~\ref{table:viability-ga}, and the system parameters for the RGA can be seen in Table~\ref{table:viability-rga}.
+Two evolutionary algorithms were used in this experiment: GA, and RGA. The system parameters for the GA can be seen in Table~\ref{table:viability-ga}, and the system parameters for the RGA can be seen in Table~\ref{table:viability-rga}. The fitness function used for the GA, and RGA is defined in Subsection~\ref{sec:fitness-exafs}.
 
-- mutation operator
-- selection
-- crossover
+Each GA type was given a random selection of individuals from the population generated using the molecular dynamics simulation (Subsection~\ref{subsec:molecular-population}). The RGA was given access to the entire population of 300 candidate solutions to be used during the restarting process. The number of generations could not be specified for the RGA experiments because of the restarting process. Details of the genetic operators are outlined in Section~\ref{sec:ga-operators}. Representation 1 (Subsection~\ref{subsec:encoding-1}) was chosen for the individuals as a direct mapping to the problem.
 
 \begin{table}
-	\label{table:viability-ga}
 	\centering
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | }
 		\hline
@@ -31,13 +25,12 @@ Two evolutionary algorithms were used in this run: GA, and RGA. The system param
 		Elitism & False & False & False & True & True & True \\ \hline
 		Generations & 30 & 30 & 30 & 30 & 30 & 30 \\ \hline
 		Population Size & 50 & 50 & 50 & 50 & 50 & 50 \\ \hline
-		Tourament Size & 3 & 3 & 3 & 3 & 3 & 3 \\ \hline
 	\end{tabular}
 	\caption{System parameters for the basic GA runs}
+	\label{table:viability-ga}
 \end{table}
 
 \begin{table}
-	\label{table:viability-rga}
 	\centering
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | }
 		\hline
@@ -45,17 +38,11 @@ Two evolutionary algorithms were used in this run: GA, and RGA. The system param
 		Crossover Rate & 80 & 80 & 80 & 80 & 70 & 70 \\ \hline
 		Mutation Rate & 20 & 20 & 20 & 20 & 30 & 30 \\ \hline
 		Elitism & True & True & True & True & True & True \\ \hline
-		Generations & 67 & 81 & 107 & 124 & 67 & 81 \\ \hline
+		% Generations & 67 & 81 & 107 & 124 & 67 & 81 \\ \hline
 		Population Size & 50 & 50 & 50 & 50 & 50 & 50 \\ \hline
-		Tourament Size & 3 & 3 & 3 & 3 & 3 & 3 \\ \hline
 		Convergence Rate & 10 & 5 & 10 & 5 & 5 & 10 \\ \hline
 		Number of Restarts & 3 & 3 & 5 & 5 & 5 & 5 \\ \hline
 	\end{tabular}
 	\caption{System parameters for the RGA runs}
+	\label{table:viability-rga}
 \end{table}
-
-\subsection{Analysis}
-
-- numbers of generations
-- rga sees more individuals
-- examples of rga
