--- a/doc/thesis/experimental-design/post-op.tex
+++ b/doc/thesis/experimental-design/post-op.tex
@@ -2,33 +2,22 @@
 
 \subsection{Purpose}
 
-- answers were close so we tried local search technique
-- suggested based on previous work maybe?
+The purpose of this study is to improve upon the results found in the study discussed in Section~\ref{sec:ga-viability}. The results of the GA viability experiment suggested that the candidate solutions found could be improved upon. Two evolutionary algorithms, differential evolution, and particle swarm optimization, were chosen to perform a local search of the search space to locate improved candidate solutions. These algorithms were selected based on their success with continuous space problems.
 
-\subsection{Setup}
+\subsection{Population}
 
-- how populations were generated
-- representation differences
-- explain Initial Movement Radius
-- fitness function
+The initial population for the DE, and PSO were generated using the random generation technique described in Subsection~\ref{subsec:random-population}. The seed candidate solution for the random generation was the best found candidate solution from the RGA experiments. The random generation technique was used in this experiment because it is suspected as the best technique to find the local optima in this situation.
+
+% - answers were close so we tried local search technique
+% - suggested based on previous work maybe?
 
 \subsection{System Parameters}
 
-\begin{table}
-	\label{table:post-op-pso}
-	\centering
-	\begin{tabular}{ | >{\bfseries}c | c | c | c | }
-		\hline
-		Experiment Set & 1 & 2 & 3 \\ \hline
-		Initial Movement Radius & 0.05 & 0.05 & 0.25 \\ \hline
-		Generations & 100 & 30 & 30 \\ \hline
-		Population Size & 50 & 50 & 50 \\ \hline
-	\end{tabular}
-	\caption{System parameters for the Post-Optimization PSO runs}
-\end{table}
+Two evolutionary algorithms were used in this experiment: DE, and PSO. The system parameters for the DE can be seen in Table~\ref{table:post-op-de}, and the system parameters for the PSO can be seen in Table~\ref{table:post-op-pso}. The \textit{initial movement radius} shown in the system parameters tables defines the \textit{user defined range} that was used to generate the initial population. The fitness function used for the DE, and PSO is defined in Subsection~\ref{sec:fitness-exafs}.
+
+An alternative individual representation was used for this experiment. DE, and PSO are algorithms that are better suited for problems that can be represented as a vector of real numbers. The individual representation that was used in the GA viability experiment was translated into a vector of real numbers (See Subsection~\ref{subsec:encoding-2}).
 
 \begin{table}
-	\label{table:post-op-de}
 	\centering
 	\begin{tabular}{ | >{\bfseries}c | c | c | }
 		\hline
@@ -38,9 +27,18 @@
 		Population Size & 50 & 50 \\ \hline
 	\end{tabular}
 	\caption{System parameters for the Post-Optimization DE runs}
+	\label{table:post-op-de}
 \end{table}
 
-\subsection{Analysis}
-
-- reasons DE might not have worked
-- benefits of post op
+\begin{table}
+	\centering
+	\begin{tabular}{ | >{\bfseries}c | c | c | c | }
+		\hline
+		Experiment Set & 1 & 2 & 3 \\ \hline
+		Initial Movement Radius & 0.05 & 0.05 & 0.25 \\ \hline
+		Generations & 100 & 30 & 30 \\ \hline
+		Population Size & 50 & 50 & 50 \\ \hline
+	\end{tabular}
+	\caption{System parameters for the Post-Optimization PSO runs}
+	\label{table:post-op-pso}
+\end{table}
