--- a/doc/thesis/analysis.tex
+++ b/doc/thesis/analysis.tex
@@ -5,3 +5,4 @@ This chapter contains the discussion of results found from the previous chapters
 \input{analysis/ga.tex}
 \input{analysis/post-op.tex}
 \input{analysis/ea.tex}
+\input{analysis/subset.tex}
