--- a/doc/thesis/analysis/ga.tex
+++ b/doc/thesis/analysis/ga.tex
@@ -6,13 +6,15 @@
 - rga sees more individuals
 - examples of rga
 
+
 \begin{table}
 	\label{table:basic-ga-results}
 	\centering
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | }
 		\hline
 		Experiment Set & 1 & 2 & 3 & 4 & 5 & 6 \\ \hline
-		RMSD &  &  &  &  &  &  \\ \hline
+		Best RMSD & 1.2471 & 1.3315 & 1.1610 & 1.1880 & \textbf{1.1173} & 1.2287 \\ \hline
+		Average Best RMSD & 1.3448 & 1.3784 & 1.2792 & 1.3315 & \textbf{1.2626} & 1.3336 \\ \hline
 	\end{tabular}
 	\caption{Basic GA Results}
 \end{table}
@@ -23,7 +25,8 @@
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | }
 		\hline
 		Experiment Set & 1 & 2 & 3 & 4 & 5 & 6 \\ \hline
-		RMSD &  &  &  &  &  &  \\ \hline
+		Best RMSD & 1.1297 & 1.1545 & 1.1132 & 1.0913 & \textbf{1.046} & 1.0953 \\ \hline
+		Average Best RMSD & 1.2281 & 1.2150 & 1.2095 & 1.2189 & \textbf{1.2031} & 1.2171 \\ \hline
 	\end{tabular}
 	\caption{RGA Results}
 \end{table}
