--- a/doc/thesis/analysis/post-op.tex
+++ b/doc/thesis/analysis/post-op.tex
@@ -11,7 +11,7 @@
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | }
 		\hline
 		Experiment Set & 1 & 2 & 3 \\ \hline
-		RMSD &  &  &  \\ \hline
+		Best RMSD &  & 0.9001 & 1.2445 \\ \hline
 	\end{tabular}
 	\caption{Results of PSO Post-Optimization}
 \end{table}
@@ -22,7 +22,7 @@
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | }
 		\hline
 		Experiment Set & 1 & 2 \\ \hline
-		RMSD &  &  \\ \hline
+		Best RMSD & 1.1386 &1.7267  \\ \hline
 	\end{tabular}
 	\caption{Results of DE Post-Optimization}
 \end{table}
