--- a/doc/thesis/experimental-design.tex
+++ b/doc/thesis/experimental-design.tex
@@ -5,3 +5,4 @@ This chapter contains the design details of each experiment.
 \input{experimental-design/ga.tex}
 \input{experimental-design/post-op.tex}
 \input{experimental-design/ea.tex}
+\input{experimental-design/subset.tex}
