--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -49,9 +49,9 @@
 %comment out what you don't need
 
 % \include{dedication}
-% \include{abstract}
+\include{abstract}
 % \include{preface}
-% \include{ack} 
+\include{ack} 
 \include{lists}
 %%list of Plates
 %list of symbols, nonmenclature, or Abbrevations
@@ -65,8 +65,7 @@
 \input{methodology}
 \input{experimental-design}
 \input{analysis}
-% \input{results}
-% \input{conclusion}
+\input{conclusion}
 
 %\theendnotes
 
@@ -75,8 +74,8 @@
 \bibliography{thesis}
 \addcontentsline{toc}{chapter}{Bibliography} 
 %this adds the Bibliography to the Table of Contents *Note it will be off my one page...this has to be edited manually in the file printing by going into the toc file and changing the numbers.  This might be done some other way but I don't know the process...feel free to edit if you find a fix*
-\appendix %this is the appendix
-\addappheadtotoc %add the appendix to the table of contents
+% \appendix %this is the appendix
+% \addappheadtotoc %add the appendix to the table of contents
 % \input{appendA}
 
 
