--- a/doc/thesis/ack.tex
+++ b/doc/thesis/ack.tex
@@ -1,6 +1,6 @@
 \thispagestyle{empty}
 \section*{Acknowledgements}
-Coming soon.
+Here I thank all the people!
 \begin{flushright}
 \textbf{C.P.} %Your initals
 \end{flushright}
