--- a/doc/thesis/analysis/post-op.tex
+++ b/doc/thesis/analysis/post-op.tex
@@ -1,31 +1,35 @@
 \section{Genetic Algorithm: Post-Optimization}
+\label{sec:post-op-analysis}
 
 \subsection{Analysis}
 
-- reasons DE might not have worked
-- benefits of post op
-
-\begin{table}
-	\centering
-	\begin{tabular}{ | >{\bfseries}c | c | c | c | }
-		\hline
-		Experiment Set & 1 & 2 & 3 \\ \hline
-		Best RMSD &  & 0.9001 & 1.2445 \\ \hline
-	\end{tabular}
-	\caption{Results of PSO Post-Optimization}
-	\label{table:post-op-pso-results}
-\end{table}
+Table~\ref{table:post-op-de-results} and Table~\ref{table:post-op-pso-results} provide a summary of the results from the DE, and PSO experiments respectively. Each experiment was run a total of 30 times to obtain the average. The two algorithms were performed using individuals generated using two different \textit{initial movement radius}. Using the larger \textit{initial movement radius} of $\pm$0.25\AA\ had a negative impact on the DE, and PSO candidate solutions. The large \textit{initial movement radius} caused the experiments to move from the initial local optima, that was found using the RGA, and move into sub-optimal solutions. As we decreased the \textit{initial movement radius} the results started to improve. Using the smaller \textit{initial movement radius} of $\pm$0.05\AA\ provided the best results.
 
 \begin{table}
 	\centering
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | }
 		\hline
 		Experiment Set & 1 & 2 \\ \hline
-		Best RMSD & 1.1386 &1.7267  \\ \hline
+		Average Best RMSD & 1.1386 &1.7267  \\ \hline
 	\end{tabular}
 	\caption{Results of DE Post-Optimization}
 	\label{table:post-op-de-results}
 \end{table}
+
+\begin{table}
+	\centering
+	\begin{tabular}{ | >{\bfseries}c | c | c | }
+		\hline
+		Experiment Set & 1 & 2 \\ \hline
+		Average Best RMSD & 0.9001 & 1.2445 \\ \hline
+	\end{tabular}
+	\caption{Results of PSO Post-Optimization}
+	\label{table:post-op-pso-results}
+\end{table}
+
+The results from the DE experiments were never able to improve upon the seed candidate solution. Decreasing the \textit{initial movement radius} improved the results from the DE but it was not enough to local improved candidate solutions.
+
+In contrast, the results from the PSO experiments were very successful. Using the \textit{initial movement radius} of $\pm$0.05\AA\ the PSO was able to greatly improve upon the seed candidate solution. Both the DE, and PSO were run for 30 generations. The DE experiments had reached a convergence but the PSO data was still on a downward slope. The PSO was run for 200 generations and it ended up locating even better solutions. Figure~\ref{fig:post-op-pso-best-exafs} shows the best EXAFS spectra after optimization from the PSO. The RMSD score of the candidate solution was significantly reduced which shows that PSO works very well as a post-optimization strategy. 
 
 \begin{figure*}
 	\centering
@@ -47,5 +51,5 @@
 		\end{axis}
 	\end{tikzpicture}
 	\caption{OEC EXAFS Spectra Comparison}
-	\label{fig:bestRunEXAFS}
+	\label{fig:post-op-pso-best-exafs}
 \end{figure*}
