--- a/doc/thesis/quotepage.tex
+++ b/doc/thesis/quotepage.tex
@@ -1,3 +1,3 @@
 \thispagestyle{empty}
 
-\begin{quote}``Your Plastic Pal Who's Fun To Be With.''\end{quote} --- from the marketing division of the Sirius Cybernetics Corporation. 
+\begin{quote}``I made a thing.''\end{quote} --- unknown
