--- a/doc/thesis/thesis.bib
+++ b/doc/thesis/thesis.bib
@@ -198,6 +198,13 @@
 	publisher={Springer}
 }
 
+@article{pedersen2010good,
+	title={Good parameters for differential evolution},
+	author={Pedersen, Magnus Erik Hvass},
+	journal={Magnus Erik Hvass Pedersen},
+	year={2010}
+}
+
 % PSO
 
 @incollection{kennedy2010particle,
@@ -218,6 +225,16 @@
 	pages={33--57},
 	year={2007},
 	publisher={Springer}
+}
+
+@inproceedings{eberhart2000comparing,
+	title={Comparing inertia weights and constriction factors in particle swarm optimization},
+	author={Eberhart, Russ C and Shi, Yuhui},
+	booktitle={Evolutionary Computation, 2000. Proceedings of the 2000 Congress on},
+	volume={1},
+	pages={84--88},
+	year={2000},
+	organization={IEEE}
 }
 
 % population generation
