--- a/doc/thesis/analysis/ea.tex
+++ b/doc/thesis/analysis/ea.tex
@@ -2,6 +2,8 @@
 
 \subsection{Analysis}
 
+After viewing the results from the DE, and PSO experiments in Section~\ref{sec:post-op-analysis} these algorithms were suspected to perform well on the structure refinement problem. Table~\ref{table:ea-de-results} shows a summary from the DE experiments and Table~\ref{table:ea-pso-results} provide a summary of the results from the PSO experiments. Each experiment was run a total of 30 times to obtain the average.
+
 \begin{table}
 	\centering
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | }
@@ -33,6 +35,8 @@
 	\caption{Results for the DE runs}
 	\label{table:ea-de-results}
 \end{table}
+
+The DE, and PSO experiments were initially run using a variety of different system parameters. The results shown in Table~\ref{table:ea-de-results} and Table~\ref{table:ea-pso-results} used the following tuning parameters. The PSO algorithm has three tunable user defined parameters: inertia, social and cognitive. Based on the work performed in the research paper~\cite{eberhart2000comparing} the parameters social and cognitive was set to 1.496180, while inertia was set to 0.729844. The DE algorithm has two tunable user defined parameters: differential weight, and crossover probability. Several different combinations of values for differential weight, and crossover probability were used but the parameters that produced the best results were from a research paper from Hvass Laboratories~\cite{pedersen2010good} where differential weight was set to 0.4717, and crossover probability was set to 0.8803.
 
 \begin{figure*}
 	\centering
